--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -13,8 +13,8 @@
   "reset_password": "Обнулить пароль",
 
   "healer": "Лекарь",
-  "my_course": "Мой курс",
-  "recipe": "Рецепты",
+  "my_course": "То что я пью сейчас",
+  "recipe": "Рецепты в базе",
 
   "add_recipe": "Добавить рецепт",
   "namePill": "Название лекарства",
