--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -35,5 +35,7 @@
   "allow_notifications": "Разрешить уведомления",
   "app_to_send_notifications": "Приложение Лекарь хочет отправлять вам уведомления",
   "disable":"Запретить",
-  "allow": "Разрешить"
+  "allow": "Разрешить",
+  "time_medication": "Время приёма лекарств:",
+  "logoff": "Вы уверены что хотите выйти из аккаута?"
 }
