--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,6 +1,7 @@
 {
   "error_auth": "Что-то пошло не так :(",
   "no_internet": "Отсутсвует интернет соединение",
+  "slow_internet": "Загрузка отменена из-за медленного интернет-соединения, как только улучшится скорость интернета, ваши данные добавятся в сеть.",
   "validation": "Не все данные введены",
 
   "login": "Войти",
@@ -18,7 +19,7 @@
 
   "add_recipe": "Добавить рецепт",
   "namePill": "Название лекарства",
-  "descriptionPill": "Описание лекарства",
+  "descriptionPill": "Описание лекарства: можно написать количество таблеток, условия приема (до или после еды), описание препарата. ",
   "add_photo": "Добавить фото лекарства",
   "change_photo": "Изменить фото лекарства",
   "add_time_pills": "Добавить время приема лекарств",
@@ -36,6 +37,9 @@
   "app_to_send_notifications": "Приложение Лекарь хочет отправлять вам уведомления",
   "disable":"Запретить",
   "allow": "Разрешить",
-  "time_medication": "Время приёма лекарств:",
-  "logoff": "Вы уверены что хотите выйти из аккаута?"
+  "time_medication": "Время приёма лекарства:",
+  "logoff": "Вы уверены что хотите выйти из аккаута?",
+
+  "my_course_info": "В этом разделе отображаются те лекарства, которые вы принимаете сейчас",
+  "recipe_info": "В этом разделе отображаются ваши рецепты которые вы когда то принимали. Нажмите на эту вкладку и создайте новый рецепт, нажав на плюс. "
 }
