--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -8,7 +8,10 @@
   "mail": "Электронная почта",
   "password": "Пароль",
   "registration": "Регистрация",
-  "forgot_password": "Забыли пароль",
+  "forgot_password": "Забыли пароль?",
+  "welcome": " Добро пожаловать,",
+  "welcome_explanation": " для сохранения ваших данных на любых устройствах, пройдите пожалуйста регистрацию",
+
 
   "password_reset_text": "Введение электронную почту для обнуления пароля",
   "reset_password": "Обнулить пароль",
