--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -12,13 +12,18 @@
   "welcome": " Добро пожаловать,",
   "welcome_explanation": " для сохранения ваших данных на любых устройствах, пройдите пожалуйста регистрацию",
 
+  "your_name": "Введите имя",
+  "meet": "Как вас зовут?",
+
+  "done": "Выход",
+  "skip": "Пропустить",
 
   "password_reset_text": "Введение электронную почту для обнуления пароля",
   "reset_password": "Обнулить пароль",
 
   "healer": "Лекарь",
-  "my_course": "То что я пью сейчас",
-  "recipe": "Рецепты в базе",
+  "my_course": "Мои лекарства",
+  "recipe": "Архив рецептов",
 
   "add_recipe": "Добавить рецепт",
   "namePill": "Название лекарства",
@@ -33,6 +38,7 @@
   "galery": "Галерея",
   "camera": "Камера",
   "cancel": "Отмена",
+  "next": "Дальше",
 
   "time_pills": "Время приема лекарств:",
 
@@ -43,6 +49,6 @@
   "time_medication": "Время приёма лекарства:",
   "logoff": "Вы уверены что хотите выйти из аккаута?",
 
-  "my_course_info": "В этом разделе отображаются те лекарства, которые вы принимаете сейчас",
+  "my_course_info": "В этом разделе отображаются те лекарства, которые вы принимаете сейчас. Добавьте лекарство.",
   "recipe_info": "В этом разделе отображаются ваши рецепты которые вы когда то принимали. Нажмите на эту вкладку и создайте новый рецепт, нажав на плюс. "
 }
