--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -40,6 +40,11 @@
   "cancel": "Отмена",
   "next": "Дальше",
 
+  "settings": "Настройки",
+  "name": "Имя",
+  "account": "Аккаунт",
+  "exit": "Выход",
+
   "time_pills": "Время приема лекарств:",
 
   "allow_notifications": "Разрешить уведомления",
