--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -9,8 +9,8 @@
   "password": "Пароль",
   "registration": "Регистрация",
   "forgot_password": "Забыли пароль?",
-  "welcome": " Добро пожаловать,",
-  "welcome_explanation": " для сохранения ваших данных на любых устройствах, пройдите пожалуйста регистрацию",
+  "welcome": " Добро пожаловать!",
+  "welcome_explanation": " для сохранения ваших данных на любых устройствах, пожалуйста, пройдите регистрацию",
 
   "your_name": "Введите имя",
   "meet": "Как вас зовут?",
@@ -23,16 +23,18 @@
 
   "healer": "Лекарь",
   "my_course": "Мои лекарства",
-  "recipe": "Архив рецептов",
+  "recipe": "Архив лекарств",
+  "add_recipe_to_archive": "Сохранить лекарство в базу данных? ",
 
-  "add_recipe": "Добавить рецепт",
+  "add_recipe": "Добавить лекарство",
   "namePill": "Название лекарства",
   "descriptionPill": "Описание лекарства: можно написать количество таблеток, условия приема (до или после еды), описание препарата. ",
   "add_photo": "Добавить фото лекарства",
   "change_photo": "Изменить фото лекарства",
   "add_time_pills": "Добавить время приема лекарств",
 
-  "del_recipe": "Удалить рецепт?",
+  "del_recipe": "Удалить лекарство?",
+  "del": "Удалить",
   "yes": "Да",
   "no": "Нет",
   "galery": "Галерея",
