--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -24,7 +24,7 @@
   "healer": "Лекарь",
   "my_course": "Мои лекарства",
   "recipe": "Архив лекарств",
-  "add_recipe_to_archive": "Сохранить лекарство в базу данных? ",
+  "add_recipe_to_archive": "Сохранить лекарство в облако? ",
 
   "add_recipe": "Добавить лекарство",
   "namePill": "Название лекарства",
@@ -43,6 +43,7 @@
   "next": "Дальше",
 
   "settings": "Настройки",
+  "settings_push": "Насторойка уведомлений",
   "name": "Имя",
   "account": "Аккаунт",
   "exit": "Выход",
