--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -43,7 +43,7 @@
   "next": "Дальше",
 
   "settings": "Настройки",
-  "settings_push": "Насторойка уведомлений",
+  "settings_push": "Настройка уведомлений",
   "name": "Имя",
   "account": "Аккаунт",
   "exit": "Выход",
